Revise personal introduction in index.html
Updated personal introduction with detailed information about research interests and activities.

--- a/index.html
+++ b/index.html
@@ -26,7 +26,12 @@
       </div>
       <div class="hero-right">
         <h2>NSF Graduate Research Fellow at CIERA, Northwestern University</h2>
-        <p>This is a static site scaffold for Yuxin Dong.</p>
+        <p>Howdy! I am an NSF Graduate Research Fellow at CIERA, Northwestern University, working with Dr. Wen-fai Fong. 
+          I’m broadly interested in understanding the origin and evolution of cosmic transients and their environments. 
+          My graduate studies focus on uncovering the physical origins of fast radio bursts using multi-wavelength 
+          observations of their local and global environments. 
+          I am also an active member of scientific collaborations including the Fast and Fortunate for FRB Follow-up (F4) collaboration and CHIME/FRB.
+          When I’m not in the office, I enjoy running, hiking, visiting national parks, and reading :)</p>
         <p class="cta"><a class="btn" href="/contact.html">Get in touch</a></p>
       </div>
     </section>
