Add contact info and prepare for background image

--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
 
   <main class="container">
     <section class="hero">
-      <div class="hero-left">
+            <div class="hero-left">
         <img src="/assets/images/headshot_23_alt.JPG" alt="Profile photo" class="profile">
+        <div class="contact">
+          <div class="institution">CIERA/Northwestern</div>
+          <a href="mailto:your.email@northwestern.edu">Email</a>
+          <a href="https://github.com/astro-vic" target="_blank">GitHub</a>
+        </div>
       </div>
       <div class="hero-right">
         <h2>NSF Graduate Research Fellow at CIERA, Northwestern University</h2>
