Update email link in index.html

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <img src="/assets/images/headshot_23_alt.JPG" alt="Profile photo" class="profile">
         <div class="contact">
           <div class="institution">CIERA/Northwestern</div>
-          <a href="mailto:your.email@northwestern.edu">Email</a>
+          <a href="mailto:yuxin[dot]dong@northwestern.edu">Email</a>
           <a href="https://github.com/astro-vic" target="_blank">GitHub</a>
         </div>
       </div>
