UI: add CV tab, remove Contact; enlarge hero and reduce overlay; prep for image uploads

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header class="site-header">
         <div class="container">
             <h1 class="site-title">Yuxin Dong <span class="chinese">| 董雨欣</span></h1>
-            <nav class="site-nav">
-                <a href="#home" class="active">Home</a>
-                <a href="#research">Research</a>
-                <a href="#publications">Publications</a>
-                <a href="#contact">Contact</a>
-            </nav>
+      <nav class="site-nav">
+        <a href="#home" class="active">Home</a>
+        <a href="#research">Research</a>
+        <a href="#publications">Publications</a>
+        <a href="/assets/cv/cv.pdf" target="_blank" rel="noopener">CV</a>
+      </nav>
         </div>
     </header>
 
@@ -170,19 +170,7 @@
       </script>
         </section>
 
-        <section id="contact">
-            <h2>Contact</h2>
-            <div class="contact-grid">
-                <div class="contact-card">
-                    <h3>Get in touch</h3>
-                    <div class="contact-info">
-            <p>Email: <a href="mailto:yuxin.dong@northwestern.edu">yuxin.dong@northwestern.edu</a></p>
-                        <p>Institution: CIERA / Northwestern University</p>
-                        <p>GitHub: <a href="https://github.com/astro-vic" target="_blank">astro-vic</a></p>
-                    </div>
-                </div>
-            </div>
-        </section>
+        
 
         <footer class="site-footer">
             <p>© 2025 Yuxin Dong | 董雨欣</p>
