--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <a href="#home" class="active">Home</a>
         <a href="#research">Research</a>
         <a href="#publications">Publications</a>
-        <a href="/assets/cv/cv.pdf" target="_blank" rel="noopener">CV</a>
+        <a href="/assets/cv/VD_CV_Oct25.pdf" target="_blank" rel="noopener">CV</a>
       </nav>
         </div>
     </header>
