--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
             <div class="hero-right">
-                <h2>NSF Graduate Research Fellow at CIERA, Northwestern University</h2>
+                <h3>NSF Graduate Research Fellow</h3>
                 
                 <p>Howdy! I am an NSF Graduate Research Fellow at CIERA, Northwestern University, working with Dr. Wen-fai Fong.</p>
                 
