Restructure hero section with square profile photo and organized contact info
- Changed profile picture from circular to square format with rounded corners
- Added structured contact information block beneath profile photo with:
  - Full email address spelled out
  - GitHub link with username
  - Institution (CIERA, Northwestern University)
  - ORCID profile link
- Removed ADS publications link from outreach section
- Added proper h1 styling with gradient text for main name
- Updated h2 styling for subtitle/position
- Created elegant contact card design with hover effects
- Maintained cyan/yellow color scheme throughout

--- a/index.html
+++ b/index.html
@@ -23,13 +23,28 @@
   <main class="container">
     <section id="home" class="hero">
             <div class="hero-left">
-                <img src="/assets/images/headshot_23_alt.JPG" alt="Your Name" class="profile-photo">
-                <div class="contact">
-                    <a href="mailto:yuxin.dong@northwestern.edu">Email</a>
-                    <a href="https://github.com/astro-vic" target="_blank">GitHub</a>
+                <img src="/assets/images/headshot_23_alt.JPG" alt="Victoria Dong" class="profile-photo">
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <span class="contact-label">Email:</span>
+                        <a href="mailto:yuxin.dong@northwestern.edu">yuxin.dong@northwestern.edu</a>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">GitHub:</span>
+                        <a href="https://github.com/astro-vic" target="_blank">astro-vic</a>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">Institution:</span>
+                        <span>CIERA, Northwestern University</span>
+                    </div>
+                    <div class="contact-item">
+                        <span class="contact-label">ORCID:</span>
+                        <a href="https://orcid.org/0000-0000-0000-0000" target="_blank">0000-0000-0000-0000</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-right">
+                <h1>Victoria Dong</h1>
                 <h2>NSF GRFP Fellow</h2>
                 
                 <p class="intro">Howdy! I'm a PhD student studying astronomy and astrophysics. This is placeholder text to test the layout alignment.</p>
@@ -232,9 +247,6 @@
               <p class="outreach-intro">I'm passionate about making astronomy accessible to everyone. Here are some of my science communication and outreach activities.</p>
               
               <div class="publication-buttons">
-                <a class="btn" href="https://ui.adsabs.harvard.edu/search/q=author%3A%22Dong%2C%20Yuxin%22&sort=date%20desc%2C%20bibcode%20desc&p_=0" target="_blank">
-                  📚 View Publications (ADS)
-                </a>
                 <a class="btn" href="https://orcid.org/0000-0000-0000-0000" target="_blank">
                   🆔 ORCID Profile
                 </a>
