--- a/index.html
+++ b/index.html
@@ -88,26 +88,23 @@
 
             <div class="frb-subsection">
               <h4 class="subsection-title"> Searching for persistent radio sources associated with FRBs </h4>
-              <p> The discovery of a persistent radio source (PRS) coincident with the first FRB 20121102A
-                revealed a compact and energetic source in a dwarf galaxy, offering one of the first clues to their origins. 
-                Motivated by this connection, I carried out new multi-frequency VLA and EVN observations of PRSs in dwarf galaxies 
-                that are offset from their galactic centers. I identified one particularly promising FRB–PRS candidate based on its compact size and location, 
-                with properties consistent with models of neutron star wind nebulae or hypernebulae. 
-                This work underscores the diversity of PRSs in dwarf galaxies and the challenges in distinguishing true FRB-associated PRSs from background active galactic nuclei.</p>
-              <div class="figures-gallery">
-                <div class="figure-item">
-                  <img src="/assets/images/LSED_PRSs.png" alt="PRS image" class="figure-image">
-                  <div class="figure-caption">
-                    <strong>Figure:</strong> Radio spectral luminosities of the sample
-                      of PRS candidates (blue), including the most promising PRS candidate, J1136+2643. The luminosities span several
-                      orders of magnitude, and are overall less luminous than the FRB-PRSs, but comparable to other radio transients.
-                      but comparable to other radio transients.
-                  </div>
+              <div class="text-with-figure">
+                <div class="text-content">
+                  <p> The discovery of a persistent radio source (PRS) coincident with the first FRB 20121102A
+                    revealed a compact and energetic source in a dwarf galaxy, offering one of the first clues to their origins. 
+                    Motivated by this connection, I carried out new multi-frequency VLA and EVN observations of PRSs in dwarf galaxies 
+                    that are offset from their galactic centers. I identified one particularly promising FRB–PRS candidate based on its compact size and location, 
+                    with properties consistent with models of neutron star wind nebulae or hypernebulae. 
+                    This work underscores the diversity of PRSs in dwarf galaxies and the challenges in distinguishing true FRB-associated PRSs from background active galactic nuclei.</p>
                 </div>
-                <div class="figure-item">
-                  <img src="/assets/images/frb-hosts-fig2.jpg" alt="Local environment analysis" class="figure-image">
-                  <div class="figure-caption">
-                    <strong>Figure:</strong> Add description of local environment constraints or offset distributions here.
+                <div class="figure-wrap">
+                  <div class="figure-item">
+                    <img src="/assets/images/LSED_PRSs.png" alt="PRS image" class="figure-image">
+                    <div class="figure-caption">
+                      <strong>Figure:</strong> Radio spectral luminosities of the sample
+                        of PRS candidates (blue), including the most promising PRS candidate, J1136+2643. The luminosities span several
+                        orders of magnitude, and are overall less luminous than the FRB-PRSs, but comparable to other radio transients.
+                    </div>
                   </div>
                 </div>
               </div>
