--- a/index.html
+++ b/index.html
@@ -23,23 +23,25 @@
   <main class="container">
     <section id="home" class="hero">
             <div class="hero-block profile-block">
-                <img src="/assets/images/headshot_23_alt.JPG" alt="You name" class="profile-photo">
-                <div class="contact-info">
-                    <div class="contact-item">
-                        <span class="contact-label">Email:</span>
-                        <a href="mailto:yuxin.dong@northwestern.edu">yuxin[dot]dong@northwestern.edu</a>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">GitHub:</span>
-                        <a href="https://github.com/astro-vic" target="_blank">astro-vic</a>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">Institution:</span>
-                        <span>CIERA, Northwestern University</span>
-                    </div>
-                    <div class="contact-item">
-                        <span class="contact-label">ORCID:</span>
-                        <a href="https://orcid.org/0000-0002-9363-8606" target="_blank">0000-0002-9363-8606</a>
+                <div class="profile-content">
+                    <img src="/assets/images/headshot_23_alt.JPG" alt="Victoria Dong" class="profile-photo">
+                    <div class="contact-info">
+                        <div class="contact-item">
+                            <span class="contact-label">Email:</span>
+                            <a href="mailto:yuxin.dong@northwestern.edu">yuxin[dot]dong@northwestern.edu</a>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-label">GitHub:</span>
+                            <a href="https://github.com/astro-vic" target="_blank">astro-vic</a>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-label">Institution:</span>
+                            <span>CIERA, Northwestern University</span>
+                        </div>
+                        <div class="contact-item">
+                            <span class="contact-label">ORCID:</span>
+                            <a href="https://orcid.org/0000-0002-9363-8606" target="_blank">0000-0002-9363-8606</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -112,13 +114,16 @@
 
             <div class="frb-subsection">
               <h4 class="subsection-title"> The environment of FRB 20201124A</h4>
-              <p>Coordinated multi-wavelength follow-up campaigns to search for counterparts and study FRB environments across the electromagnetic spectrum.</p>
-              
-              <div class="figures-gallery">
-                <div class="figure-item">
-                  <img src="/assets/images/4panel_optical-1.png" alt="Multi-wavelength observations" class="figure-image">
-                  <div class="figure-caption">
-                    <strong>Figure:</strong> Add description of multi-wavelength observation results or limits here.
+              <div class="text-with-figure">
+                <div class="text-content">
+                  <p>Coordinated multi-wavelength follow-up campaigns to search for counterparts and study FRB environments across the electromagnetic spectrum.</p>
+                </div>
+                <div class="figure-wrap">
+                  <div class="figure-item">
+                    <img src="/assets/images/4panel_optical-1.png" alt="Multi-wavelength observations" class="figure-image">
+                    <div class="figure-caption">
+                      <strong>Figure:</strong> Add description of multi-wavelength observation results or limits here.
+                    </div>
                   </div>
                 </div>
               </div>
