--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Yuxin Dong | 董雨欣</title>
-    <link rel="icon" type="image/png" href="/assets/images/bunny_shootingstar.png">
+    <link rel="icon" type="image/jpg" href="/assets/images/dong.jpg">
     <link rel="apple-touch-icon" href="/assets/images/dong.jpg">
     <link rel="stylesheet" href="/assets/css/style.css">
     <script src="/assets/js/scroll.js" defer></script>
