--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                   </p> Using observations from VLA and EVN, we studied a sample of off-nuclear PRSs in nearby dwarf galaxies. Among them, we identified 
                   one source as the most promising FRB-PRS candidate, J1136+2643, distinguished by its compact size and galactocentric offset. While other sources 
                   may also be FRB-PRSs, some are likely background AGN. Comparing our data to models of neutron star wind nebulae and hypernebulae, 
-                  we found that the most promising candidate's properties are consistent with these scenarios.
+                  we found that the radio properties of J1136+2643 are consistent with both scenarios.
 
                       </p>
                   <p> This work highlights the diversity of PRSs in dwarf galaxies, the flexibility of current FRB progenitor models, 
