--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
                 <div class="text-content">
                   <p>FRB 20201124A is one of the most active repeaters ever observed, yet it sits in a region without any obvious optical signs of star formation. 
                    Using VLA and HST observations, we mapped the location and morphology of star formation throughout the host and searched for a PRS
-                   coincident with the FRB. Our observations revealed dust-obscured star formaton extending to the FRB's location, suggesting a magnetar
+                   coincident with the FRB. 
+                   <p>
+
+                   </p>Our observations revealed dust-obscured star formaton extending to the FRB's location, suggesting a magnetar
                    born in-situ from the explosion of a massive star as the central engine. Our observations reveal that this is the most dust-obscured FRB host discovered so far. More recently, it even has a tentative PRS association, making its environment truly unique. 
                    Cases like this show why looking across multiple wavelengths is so important for understanding where FRBs come from. </p>
                 </div>
