--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@
                   <div class="figure-item">
                     <img src="/assets/images/4panel_optical-1.png" alt="Multi-wavelength observations" class="figure-image">
                     <div class="figure-caption">
-                      <strong>Figure:</strong> Add description of multi-wavelength observation results or limits here.
+                      <strong>Figure:</strong> HST imaging of the FRB 20201124A host galaxy, with radio contours overlaid at 6 GHz (blue) and 22 GHz (magenta). The 
+                      radio emission is clearly resolved and extends to the FRB position (red star), indicating the presence of star formation at the FRB’s location.
                     </div>
                   </div>
                 </div>
