--- a/index.html
+++ b/index.html
@@ -168,13 +168,22 @@
         <!-- Ca-rich transients block -->
         <article class="project-card research-card" id="block-ca-rich">
           <h3>Ca-rich Transients</h3>
-          <p> Characterized by strong calcium emission lines and faint luminosities, 
-            calcium-rich (Ca-rich) transients are a peculiar subclass of supernovae 
-            that may play an important role in enriching the intracluster medium (ICM). 
-            Yet, their progenitor systems and explosion mechanisms remain mysterious. 
-            As an undergraduate at Purdue University, I worked with Prof. Dan Milisavljević to 
-            investigate the stellar populations of their host galaxies using broadband photometry... 
-          </p>
+          <p> Calcium-rich (Ca-rich) transients are a quirky class of supernovae, known for their rapid evolution,
+             modest brightness, and strong calcium emission lines. Despite these distinctive features, their progenitors are 
+             still debated. Interestingly, nearly half are found in the outskirts of mostly elliptical galaxies, 
+             hinting at a connection to older stellar populations rather than massive young stars. <p>
+
+
+             </p> As an undergraduate at Purdue, I worked with Prof. Dan Milisavljevic to get at the progenitor question
+            through their environments. We compiled archival multi-wavelength observations for a sample of Ca-rich transients and used the stellar
+             population modeling tool Prospector to study their host properties. For nine host galaxies, we were able to construct detailed
+             star formation histories, which we used to determine supernova rates and assess whether each transient likely
+             originated from a core-collapse or Type Ia-like explosion.</p>
+
+             <p>Our results suggest that Ca-rich transients don't exclusively come from core-collapse SNe. Instead, they likely arise either from white dwarfs
+              or a mixed population including both white dwarfs and massive stars. I had a lot of fun (and growing pains) learning SED fitting and stellar population analysis 
+              through this project and was my first dive into the world of transients!
+             </p>
           <div class="project-details">
             <h4>Key Figure</h4>
             <div class="figures-gallery">
