--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@
               <div class="figure-item">
                 <img src="/assets/images/ca-rich_SED.jpg" alt="Ca-rich" class="figure-image">
                 <div class="figure-caption">
-                  <strong>Figure:</strong> Add your Ca-rich transients figure caption here describing the stellar population analysis or SED fitting results.
+                  <strong>Figure:</strong> Broadband photometry of a Ca-rich transient host, spanning optical to FIR. 
+                  Best-fit model spectra and model photometry (red line and squares) are shown for both a simple parametric model and 
+                  a more sophisticated non-parametric model. The Prospector models capture the data well across all wavelengths, 
+                  allowing robust estimates of the host galaxy’s properties.
                 </div>
               </div>
             </div>
