--- a/index.html
+++ b/index.html
@@ -236,9 +236,8 @@
             <h2>Outreach & Science Communication</h2>
             
             <div class="publications-header">
-              <p class="outreach-intro">🌟 Beyond the lab, I'm all about sharing the wonder of the universe! Whether I'm explaining cosmic mysteries over craft beer 🍺 or building communities where everyone feels like they belong, I believe science is for everyone. 
-              
-              </p><p class="outreach-intro">From turning complex astrophysics into engaging stories to co-founding organizations that lift each other up, here's how I try to make the cosmos a little more accessible and our community a lot more inclusive! ✨</p>
+              <p class="outreach-intro">Outside of research, I’m passionate about outreach and building a supportive, inclusive community. 
+                Here are a few ways I try to make that happen.</p>
             </div>
 
             <div class="outreach-presentations">
@@ -256,20 +255,16 @@
                   <div class="outreach-slide active">
                     <div class="slide-layout">
                       <div class="slide-text">
-                        <h4>Event Overview</h4>
                         <div class="highlight-stat">
-                          <span class="stat-number">3+</span>
-                          <span class="stat-label">Speaking Events</span>
                         </div>
-                        <p>Regular presenter at Astronomy on Tap Chicago, where I break down complex FRB research for diverse audiences in local bars and breweries.</p>
-                        <ul class="slide-highlights">
-                          <li>100+ attendees per event</li>
-                          <li>Interactive Q&A sessions</li>
-                          <li>Collaborative science communication</li>
-                        </ul>
+                        <p>It's always fun bringing astronomy to folks over a few drinks of beer at local breweries.
+                          I started volunteering for AoT since 2021 and have been one of the main organizers ever since. I usually 
+                        help with things like venue coordination, social media advertisement, speaker recruitment, and event setup on the day of. 
+                        People always ask the best questions and know all the answers to the trivia questions!! 
+                        There's never a dull moment when talking to people about astronomy. I mean, how could you!?</p>
                       </div>
                       <div class="slide-image">
-                        <img src="/assets/images/aot-overview.jpg" alt="Astronomy on Tap venue" class="presentation-photo">
+                        <img src="/assets/images/aot_3.jpg" alt="Astronomy on Tap venue" class="presentation-photo">
                         <p class="photo-caption">Typical Astronomy on Tap Chicago venue atmosphere</p>
                       </div>
                     </div>
@@ -341,7 +336,9 @@
               <!-- Graduate Womxn in Physics Slide Deck -->
               <div class="presentation-container">
                 <div class="presentation-header">
-                  <div class="presentation-icon">👩‍🔬</div>
+                  <div class="presentation-icon">
+                    <img src="/assets/images/GWIP.png" alt="GWIP Logo" class="presentation-logo">
+                  </div>
                   <h3>Graduate Womxn in Physics</h3>
                   <p class="presentation-tagline">Building community and representation in physics and astronomy</p>
                 </div>
