--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
               <div class="presentation-container">
                 <div class="presentation-header">
                   <div class="presentation-icon">
-                    <img src="/assets/images/GWIP.png" alt="GWIP Logo" class="presentation-logo">
+                    <img src="/assets/images/GWiP.png" alt="GWIP Logo" class="presentation-logo">
                   </div>
                   <h3>Graduate Womxn in Physics</h3>
                   <p class="presentation-tagline">Building community and representation in physics and astronomy</p>
